--- a/estate_nursery/views/estate_nursery_cleavageseed_view.xml
+++ b/estate_nursery/views/estate_nursery_cleavageseed_view.xml
@@ -99,6 +99,7 @@
                     <field name="qty_double" string="&#931; Batch Double"/>
                     <field name="qty_normal_double" string="Nor Separation"/>
                     <field name="qty_abnormal_double" string="Abn Separation"/>
+                    <field name="location_type" string="Location virtual" readonly="1"/>
                     <field name="location_id" string="Location To"/>
                     <field name="total_lastsaldo" string="Total Last Saldo"/>
                 </tree>
