--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -206,6 +206,7 @@
                             <field name="date_planted" attrs="{'required': [('state','=','draft')], 'readonly': [('state','=','done')]}"/>
                             <field name="state" invisible="True"/>
                             <field name="stage_id" invisible="True" readonly="True"/>
+                            <field name="status"/>
                         </group>
                         <group name="top_right">
                             <field name="picking_id"/>
